option('tests', type: 'feature', description: 'Build tests')
option('nlmode', type: 'feature', description: 'no run-time control')
option(
    'phal',
    type: 'feature',
    value: 'disabled',
    description: '''Enable PHAL APIs for retrieving data from the POWER
                         Systems device tree''',
)
option(
    'attn_config',
    type: 'string',
    value: '',
    description: 'Attention handler default configuration override',
)
option(
    'op_dump_obj_path',
    type: 'string',
    value: '/org/openpower/dump',
    description: 'Object path requesting OpenPOWER dumps',
)
