
# Install the RAS data files

ras_data_files = files(
    'data/ras-data-p10-10.json',
    'data/ras-data-p10-20.json',
    'data/ras-data-explorer-11.json',
    'data/ras-data-explorer-20.json',
)

install_data( ras_data_files, install_dir: join_paths(package_dir, 'data') )

# Install the RAS data schema

ras_data_schema = files( 'schema/ras-data-schema.json' )

install_data( ras_data_schema, install_dir: join_paths(package_dir, 'schema') )

