
# Install the RAS data files

ras_data_files = files(
    'data/ras-data-p10-10.json',
    'data/ras-data-p10-20.json',
    'data/ras-data-explorer-11.json',
    'data/ras-data-explorer-20.json',
    'data/ras-data-odyssey-10.json',
)

install_data( ras_data_files, install_dir: join_paths(package_dir, 'ras-data') )

# Install the RAS data schema

ras_data_schema = files( 'schema/ras-data-schema-v02.json' )

install_data( ras_data_schema, install_dir: join_paths(package_dir, 'schema') )

